app/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: master
        image: us.gcr.io/datacenter-292401/docker-frontend:3.0
        resources:
          requests:
            cpu: 100m
            memory: 400Mi
        ports:
        - containerPort: 5000
