app/frontend/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type : NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: frontend
